--- a/employeeService/webapp-service.yaml
+++ b/employeeService/webapp-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name : employee-webapp
 spec :
   selector :
-    - app : webapp
+    app : webapp
   ports :
     - name : http
       port : 80
