--- a/employeeService/webapp-pod.yaml
+++ b/employeeService/webapp-pod.yaml
@@ -2,6 +2,8 @@ apiVersion : v1
 kind : Pod
 metadata:
   name : webapp
+  labels :
+    employee : webapp
 spec :
   containers :
     - name : webapp
